# clif

./: BUILD  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.txt  Dockerfile  INSTALL.sh  README.md  WHATS_NEW  WORKSPACE  clif_build_rule.bzl  clif_configure.bzl  clif_deps.bzl  leakr_badfiles.dic  leakr_badwords.dic  requirements.txt  setup.py
clif/: BUILD  CMakeLists.txt  CONTRIBUTORS.md  common_shared_3p_blueprint_information.ncl  extension.py  pyclif.py
clif/backend/: BUILD  CMakeLists.txt  another_file.h  ast.cc  ast.h  ast_test.cc  code_builder.cc  code_builder.h  empty.h  matcher.cc  matcher.h  matcher_main.cc  matcher_test.cc  strutil.h  test.h  test_clif_aux.h  versioned_smart_ptr_test.h
clif/backend/test_subdir/: test_clif_aux.h
clif/cmake/modules/: CLIFUtils.cmake
clif/protos/: BUILD  CMakeLists.txt  ast.proto
clif/pybind11/: classes.py  clif_type_casters.cc  clif_type_casters.h  consts.py  enums.py  function.py  function_lib.py  gen_type_info.py  generator.py  lambdas.py  operators.py  pyclif_pybind11_module_macro.h  runtime.cc  runtime.h  status_casters.h  status_return_override.cc  status_return_override.h  topo_sort.py  type_casters.h  type_casters.py  unknown_default_value.py  utils.py  variables.py
clif/pybind11/cindex/: extractor.py  extractor_test.py
clif/pybind11/g3doc/: dev_notes.md
clif/pybind11/staging/: classes.cc  classes_test.py  concrete_base.cc  concrete_base.h  concrete_derived.cc  concrete_derived.h  concrete_test.py  enums.cc  enums_test.py  extend_classmethods.cc  extend_classmethods_test.py  extend_default_value.cc  extend_default_value_test.py  extend_from_clifaux.cc  extend_from_clifaux_test.py  extend_init.cc  extend_init_test.py  extend_properties.cc  extend_properties_test.py  nested_inheritance.cc  nested_inheritance_test.py  number_methods.cc  number_methods_test.py  operators.cc  operators_test.py  smart_ptrs.cc  smart_ptrs_test.py  special_classes.cc  special_classes_test.py  static_methods.cc  static_methods_test.py  templates.cc  templates_test.py  variables.cc  variables_test.py  virtual_funcs_basics.cc  virtual_funcs_basics_test.py
clif/python/: BUILD  CMakeLists.txt  README.md  abc_utils.py  ast_manipulations.py  astutils.py  callback_exception_guard.py  class_test.py  clif_types.py  ext.md  faq.md  func_test.py  gen.py  gen_test.py  generator_test.py  instance.h  instance_test.cc  instrumentation_for_testing.py  meta_ext.clif  meta_ext.h  module_test.py  optional.cc  optional.h  pickle_support.cc  pickle_support.h  postconv.h  postconv.py  postconv_test.cc  postconv_test.py  postproc.py  postproc_test.py  primer.md  proto.py  proto_test.py  proto_util.cc  proto_util.h  ptr_util.h  py2slots.py  py3slots.py  pyext.py  (+25 more)
clif/python/utils/: CMakeLists.txt  __init__.py  proto_util.cc  proto_util.clif  proto_util.h  proto_util.python2.inc  proto_util.python3.inc  proto_util_init.cc  proto_util_init.python2.inc  proto_util_init.python3.inc
clif/testing/: CMakeLists.txt  absl_cord.h  absl_int128.h  absl_uint128.h  add_init_and_property.h  alt_bytes.h  call_method.h  callback.h  capsule_fqcppname.h  circular.h  class_module_attr.h  class_release_gil_before_calling_cpp_dtor.h  classes.h  const_char_ptr.h  const_pointer_return.h  copy_move_types_custom_from_as.h  copy_move_types_library.h  default_args.h  diamond_inheritance.h  enable_instance_dict.h  extend_classmethods.cc  extend_classmethods.h  extend_default_value.h  extend_from_clifaux.h  extend_init.h  extend_methods.h  extend_properties.h  extension_type_refcount.h  final.h  final_nested.h  hidden.h  implicit_conversion.h  imported_capsule.h  imported_inheritance.h  imported_methods.h  interface_declarer.h  interface_user.h  is_extended_from_python_a.h  is_extended_from_python_b.h  iterator.h  (+71 more)
clif/testing/derived_in_other_header/: concrete_base.h  concrete_derived.h  shared_unique_interop.h  virtual_base.h  virtual_derived.h
clif/testing/python/: CMakeLists.txt  absl_cord.clif  absl_cord_test.py  absl_int128.clif  absl_int128_test.py  absl_uint128.clif  absl_uint128_test.py  add_init_and_property.clif  add_init_and_property_test.py  alt_bytes.clif  alt_bytes_test.py  call_method.clif  call_method_test.py  callback.clif  callback_test.py  capsule_fqcppname.clif  capsule_fqcppname_test.py  circular.clif  circular_test.py  class_module_attr.clif  class_module_attr_test.py  class_release_gil_before_calling_cpp_dtor.clif  class_release_gil_before_calling_cpp_dtor_test.py  classes.clif  classes_test.py  const_char_ptr.clif  const_char_ptr_test.py  const_pointer_return.clif  const_pointer_return_test.py  copy_move_types_custom_from_as.clif  copy_move_types_custom_from_as_clif_use.h  copy_move_types_custom_from_as_test.py  copy_move_types_library.clif  copy_move_types_library_test.py  default_args.clif  default_args_clif_aux.h  default_args_test.py  diamond_inheritance.clif  diamond_inheritance_test.py  enable_instance_dict.clif  (+176 more)
clif/testing/unspecified_inheritance/: unspec_base.h  unspec_derived.h
examples/: CMakeLists.txt  README.md  setup.py
examples/callbacks/: callbacks.h  setup.py
examples/callbacks/python/: CMakeLists.txt  callbacks.clif  callbacks_test.py
examples/clif_aux/: lib_hello.h
examples/clif_aux/python/: CMakeLists.txt  lib_hello.clif  lib_hello_clif_aux.h  lib_hello_test.py
examples/extend_from_clifaux/: example.h
examples/extend_from_clifaux/python/: CMakeLists.txt  example.clif  example_clif_aux.h  example_test.py
examples/extend_from_python/: example.h
examples/extend_from_python/python/: example.clif  (+3 more)
examples/inheritance/: base.h  hidden_base.h  inheritance.h  operation.h  python_inheritance.h  setup.py
examples/property/: CMakeLists.txt  myoptions.h  setup.py
examples/templates/: setup.py  templates.h
examples/unique_ptr_member/: CMakeLists.txt  unique_ptr_member.h
examples/wrap_protos/: CMakeLists.txt  setup.py  wrap_protos.h
examples/wrapfunc/: CMakeLists.txt  default_args.h  setup.py  wrapfunc.cc  wrapfunc.h
examples/wrapmethod/: CMakeLists.txt  setup.py  wrapmethod.cc  wrapmethod.h
examples/wrappod/: setup.py  wrappod.h
(+53 files in other folders)
